src/SdlSharp.ImGui.Native/dear_bindings/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef unsigned int ImGuiID;      
typedef unsigned int ImU32;        
typedef struct ImGuiTableSortSpecs_t ImGuiTableSortSpecs;                      
typedef int ImGuiTableBgTarget;   
typedef int ImGuiPopupFlags;        
typedef int ImGuiTableFlags;        
typedef int ImGuiTableColumnFlags;  
typedef int ImGuiTableRowFlags;     
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_OpenPopup(const char* str_id, ImGuiPopupFlags popup_flags );                          
CIMGUI_API void ImGui_OpenPopupID(ImGuiID id, ImGuiPopupFlags popup_flags );                                
CIMGUI_API void ImGui_OpenPopupOnItemClick(const char* str_id , ImGuiPopupFlags popup_flags );  
CIMGUI_API void ImGui_CloseCurrentPopup(void);                                                                       
CIMGUI_API bool ImGui_BeginPopupContextItemEx(const char* str_id , ImGuiPopupFlags popup_flags );    
CIMGUI_API bool ImGui_BeginPopupContextWindowEx(const char* str_id , ImGuiPopupFlags popup_flags );  
CIMGUI_API bool ImGui_BeginPopupContextVoidEx(const char* str_id , ImGuiPopupFlags popup_flags );    
CIMGUI_API bool ImGui_IsPopupOpen(const char* str_id, ImGuiPopupFlags flags );  
CIMGUI_API bool ImGui_BeginTableEx(const char* str_id, int columns, ImGuiTableFlags flags , ImVec2 outer_size , float inner_width );
CIMGUI_API void ImGui_EndTable(void);                                                                             
CIMGUI_API void ImGui_TableNextRowEx(ImGuiTableRowFlags row_flags , float min_row_height );  
CIMGUI_API bool ImGui_TableNextColumn(void);                                                                      
CIMGUI_API bool ImGui_TableSetColumnIndex(int column_n);                                                          
CIMGUI_API void ImGui_TableSetupColumnEx(const char* label, ImGuiTableColumnFlags flags , float init_width_or_weight , ImGuiID user_id );
CIMGUI_API void ImGui_TableSetupScrollFreeze(int cols, int rows);                                  
CIMGUI_API void ImGui_TableHeader(const char* label);                                              
CIMGUI_API void ImGui_TableHeadersRow(void);                                                       
CIMGUI_API void ImGui_TableAngledHeadersRow(void);                                                 
CIMGUI_API ImGuiTableSortSpecs*  ImGui_TableGetSortSpecs(void);                       
CIMGUI_API int                   ImGui_TableGetColumnCount(void);                     
CIMGUI_API int                   ImGui_TableGetColumnIndex(void);                     
CIMGUI_API int                   ImGui_TableGetRowIndex(void);                        
CIMGUI_API const char*           ImGui_TableGetColumnName(int column_n );   
CIMGUI_API ImGuiTableColumnFlags ImGui_TableGetColumnFlags(int column_n );  
CIMGUI_API void                  ImGui_TableSetColumnEnabled(int column_n, bool v);   
CIMGUI_API int                   ImGui_TableGetHoveredColumn(void);                   
CIMGUI_API void                  ImGui_TableSetBgColor(ImGuiTableBgTarget target, ImU32 color, int column_n ); 
CIMGUI_API void  ImGui_ColumnsEx(int count , const char* id , bool borders );
CIMGUI_API void  ImGui_NextColumn(void);                                   
CIMGUI_API int   ImGui_GetColumnIndex(void);                               
CIMGUI_API float ImGui_GetColumnWidth(int column_index );        
CIMGUI_API void  ImGui_SetColumnWidth(int column_index, float width);      
typedef enum
{
    ImGuiPopupFlags_None                    = 0,
    ImGuiPopupFlags_MouseButtonLeft         = 0,      
    ImGuiPopupFlags_MouseButtonRight        = 1,      
    ImGuiPopupFlags_MouseButtonMiddle       = 2,      
    ImGuiPopupFlags_MouseButtonMask_        = 0x1F,
    ImGuiPopupFlags_MouseButtonDefault_     = 1,
    ImGuiPopupFlags_NoReopen                = 1<<5,   
    ImGuiPopupFlags_NoOpenOverExistingPopup = 1<<7,   
    ImGuiPopupFlags_NoOpenOverItems         = 1<<8,   
    ImGuiPopupFlags_AnyPopupId              = 1<<10,  
    ImGuiPopupFlags_AnyPopupLevel           = 1<<11,  
    ImGuiPopupFlags_AnyPopup                = ImGuiPopupFlags_AnyPopupId | ImGuiPopupFlags_AnyPopupLevel,
} ImGuiPopupFlags_;
typedef enum
{
    ImGuiTableFlags_None                       = 0,
    ImGuiTableFlags_Resizable                  = 1<<0,   
    ImGuiTableFlags_Reorderable                = 1<<1,   
    ImGuiTableFlags_Hideable                   = 1<<2,   
    ImGuiTableFlags_Sortable                   = 1<<3,   
    ImGuiTableFlags_NoSavedSettings            = 1<<4,   
    ImGuiTableFlags_ContextMenuInBody          = 1<<5,   
    ImGuiTableFlags_RowBg                      = 1<<6,   
    ImGuiTableFlags_BordersInnerH              = 1<<7,   
    ImGuiTableFlags_BordersOuterH              = 1<<8,   
    ImGuiTableFlags_BordersInnerV              = 1<<9,   
    ImGuiTableFlags_BordersOuterV              = 1<<10,  
    ImGuiTableFlags_BordersH                   = ImGuiTableFlags_BordersInnerH | ImGuiTableFlags_BordersOuterH, 
    ImGuiTableFlags_BordersV                   = ImGuiTableFlags_BordersInnerV | ImGuiTableFlags_BordersOuterV, 
    ImGuiTableFlags_BordersInner               = ImGuiTableFlags_BordersInnerV | ImGuiTableFlags_BordersInnerH, 
    ImGuiTableFlags_BordersOuter               = ImGuiTableFlags_BordersOuterV | ImGuiTableFlags_BordersOuterH, 
    ImGuiTableFlags_Borders                    = ImGuiTableFlags_BordersInner | ImGuiTableFlags_BordersOuter, 
    ImGuiTableFlags_NoBordersInBody            = 1<<11,  
    ImGuiTableFlags_NoBordersInBodyUntilResize = 1<<12,  
    ImGuiTableFlags_SizingFixedFit             = 1<<13,  
    ImGuiTableFlags_SizingFixedSame            = 2<<13,  
    ImGuiTableFlags_SizingStretchProp          = 3<<13,  
    ImGuiTableFlags_SizingStretchSame          = 4<<13,  
    ImGuiTableFlags_NoHostExtendX              = 1<<16,  
    ImGuiTableFlags_NoHostExtendY              = 1<<17,  
    ImGuiTableFlags_NoKeepColumnsVisible       = 1<<18,  
    ImGuiTableFlags_PreciseWidths              = 1<<19,  
    ImGuiTableFlags_NoClip                     = 1<<20,  
    ImGuiTableFlags_PadOuterX                  = 1<<21,  
    ImGuiTableFlags_NoPadOuterX                = 1<<22,  
    ImGuiTableFlags_NoPadInnerX                = 1<<23,  
    ImGuiTableFlags_ScrollX                    = 1<<24,  
    ImGuiTableFlags_ScrollY                    = 1<<25,  
    ImGuiTableFlags_SortMulti                  = 1<<26,  
    ImGuiTableFlags_SortTristate               = 1<<27,  
    ImGuiTableFlags_HighlightHoveredColumn     = 1<<28,  
    ImGuiTableFlags_SizingMask_                = ImGuiTableFlags_SizingFixedFit | ImGuiTableFlags_SizingFixedSame | ImGuiTableFlags_SizingStretchProp | ImGuiTableFlags_SizingStretchSame,
} ImGuiTableFlags_;
typedef enum
{
    ImGuiTableColumnFlags_None                 = 0,
    ImGuiTableColumnFlags_Disabled             = 1<<0,   
    ImGuiTableColumnFlags_DefaultHide          = 1<<1,   
    ImGuiTableColumnFlags_DefaultSort          = 1<<2,   
    ImGuiTableColumnFlags_WidthStretch         = 1<<3,   
    ImGuiTableColumnFlags_WidthFixed           = 1<<4,   
    ImGuiTableColumnFlags_NoResize             = 1<<5,   
    ImGuiTableColumnFlags_NoReorder            = 1<<6,   
    ImGuiTableColumnFlags_NoHide               = 1<<7,   
    ImGuiTableColumnFlags_NoClip               = 1<<8,   
    ImGuiTableColumnFlags_NoSort               = 1<<9,   
    ImGuiTableColumnFlags_NoSortAscending      = 1<<10,  
    ImGuiTableColumnFlags_NoSortDescending     = 1<<11,  
    ImGuiTableColumnFlags_NoHeaderLabel        = 1<<12,  
    ImGuiTableColumnFlags_NoHeaderWidth        = 1<<13,  
    ImGuiTableColumnFlags_PreferSortAscending  = 1<<14,  
    ImGuiTableColumnFlags_PreferSortDescending = 1<<15,  
    ImGuiTableColumnFlags_IndentEnable         = 1<<16,  
    ImGuiTableColumnFlags_IndentDisable        = 1<<17,  
    ImGuiTableColumnFlags_AngledHeader         = 1<<18,  
    ImGuiTableColumnFlags_IsEnabled            = 1<<24,  
    ImGuiTableColumnFlags_IsVisible            = 1<<25,  
    ImGuiTableColumnFlags_IsSorted             = 1<<26,  
    ImGuiTableColumnFlags_IsHovered            = 1<<27,  
    ImGuiTableColumnFlags_WidthMask_           = ImGuiTableColumnFlags_WidthStretch | ImGuiTableColumnFlags_WidthFixed,
    ImGuiTableColumnFlags_IndentMask_          = ImGuiTableColumnFlags_IndentEnable | ImGuiTableColumnFlags_IndentDisable,
    ImGuiTableColumnFlags_StatusMask_          = ImGuiTableColumnFlags_IsEnabled | ImGuiTableColumnFlags_IsVisible | ImGuiTableColumnFlags_IsSorted | ImGuiTableColumnFlags_IsHovered,
    ImGuiTableColumnFlags_NoDirectResize_      = 1<<30,  
} ImGuiTableColumnFlags_;
typedef enum
{
    ImGuiTableBgTarget_None   = 0,
    ImGuiTableBgTarget_RowBg0 = 1,  
    ImGuiTableBgTarget_RowBg1 = 2,  
    ImGuiTableBgTarget_CellBg = 3,  
} ImGuiTableBgTarget_;
struct ImGuiTableSortSpecs_t
{
    const ImGuiTableColumnSortSpecs* Specs;       
    int                              SpecsCount;  
    bool                             SpecsDirty;  
};
CIMGUI_API bool   ImGui_ComboObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); 
CIMGUI_API bool   ImGui_ComboObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool   ImGui_ListBoxObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); 
CIMGUI_API bool   ImGui_ListBoxObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int height_in_items );