src/Sdl3Sharp.ImGui/Native/ImGui.cs


    /// <summary>
    /// Popups: open/close functions
    /// - OpenPopup(): set popup state to open. ImGuiPopupFlags are available for opening options.
    /// - If not modal: they can be closed by clicking anywhere outside them, or by pressing ESCAPE.
    /// - CloseCurrentPopup(): use inside the BeginPopup()/EndPopup() scope to close manually.
    /// - CloseCurrentPopup() is called by default by Selectable()/MenuItem() when activated (FIXME: need some options).
    /// - Use ImGuiPopupFlags_NoOpenOverExistingPopup to avoid opening a popup if there's already one at the same level. This is equivalent to e.g. testing for !IsAnyPopupOpen() prior to OpenPopup().
    /// - Use IsWindowAppearing() after BeginPopup() to tell if a window just opened.
    /// - IMPORTANT: Notice that for OpenPopupOnItemClick() we exceptionally default flags to 1 (== ImGuiPopupFlags_MouseButtonRight) for backward compatibility with older API taking 'int mouse_button = 1' parameter
    /// call to mark popup as open (don't call every frame!).
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_OpenPopup")]
    public static partial void OpenPopup([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImGuiPopupFlags popup_flags);

    /// <summary>
    /// id overload to facilitate calling from nested stacks
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_OpenPopupID")]
    public static partial void OpenPopupID(ImGuiID id, ImGuiPopupFlags popup_flags);

    /// <summary>
    /// helper to open popup when clicked on last item. Default to ImGuiPopupFlags_MouseButtonRight == 1. (note: actually triggers on the mouse _released_ event to be consistent with popup behaviors)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_OpenPopupOnItemClick")]
    public static partial void OpenPopupOnItemClick([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImGuiPopupFlags popup_flags);

    /// <summary>
    /// manually close the popup we have begin-ed into.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_CloseCurrentPopup")]
    public static partial void CloseCurrentPopup();

    /// <summary>
    /// open+begin popup when clicked on last item. Use str_id==NULL to associate the popup to previous item. If you want to use that on a non-interactive item such as Text() you need to pass in an explicit ID here. read comments in .cpp!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginPopupContextItemEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginPopupContextItemEx([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImGuiPopupFlags popup_flags);

    /// <summary>
    /// open+begin popup when clicked on current window.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginPopupContextWindowEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginPopupContextWindowEx([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImGuiPopupFlags popup_flags);

    /// <summary>
    /// open+begin popup when clicked in void (where there are no windows).
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginPopupContextVoidEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginPopupContextVoidEx([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImGuiPopupFlags popup_flags);

    #endregion

    #region Popups: query functions

    /// <summary>
    /// Popups: query functions
    /// - IsPopupOpen(): return true if the popup is open at the current BeginPopup() level of the popup stack.
    /// - IsPopupOpen() with ImGuiPopupFlags_AnyPopupId: return true if any popup is open at the current BeginPopup() level of the popup stack.
    /// - IsPopupOpen() with ImGuiPopupFlags_AnyPopupId + ImGuiPopupFlags_AnyPopupLevel: return true if any popup is open.
    /// return true if the popup is open.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_IsPopupOpen")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool IsPopupOpen([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImGuiPopupFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginTableEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool BeginTableEx([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, int columns, ImGuiTableFlags flags, ImVec2 outer_size, float inner_width);

    /// <summary>
    /// only call EndTable() if BeginTable() returns true!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_EndTable")]
    public static partial void EndTable();

    /// <summary>
    /// append into the first cell of a new row.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableNextRowEx")]
    public static partial void TableNextRowEx(ImGuiTableRowFlags row_flags, float min_row_height);

    /// <summary>
    /// append into the next column (or first column of next row if currently in last column). Return true when column is visible.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableNextColumn")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool TableNextColumn();

    /// <summary>
    /// append into the specified column. Return true when column is visible.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableSetColumnIndex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool TableSetColumnIndex(int column_n);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableSetupColumnEx")]
    public static partial void TableSetupColumnEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImGuiTableColumnFlags flags, float init_width_or_weight, ImGuiID user_id);

    /// <summary>
    /// lock columns/rows so they stay visible when scrolled.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableSetupScrollFreeze")]
    public static partial void TableSetupScrollFreeze(int cols, int rows);

    /// <summary>
    /// submit one header cell manually (rarely used)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableHeader")]
    public static partial void TableHeader([MarshalAs(UnmanagedType.LPUTF8Str)] string label);

    /// <summary>
    /// submit a row with headers cells based on data provided to TableSetupColumn() + submit context menu
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableHeadersRow")]
    public static partial void TableHeadersRow();

    /// <summary>
    /// submit a row with angled headers for every column with the ImGuiTableColumnFlags_AngledHeader flag. MUST BE FIRST ROW.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableAngledHeadersRow")]
    public static partial void TableAngledHeadersRow();

    #endregion

    #region Tables: Sorting & Miscellaneous functions

    /// <summary>
    /// Tables: Sorting &amp; Miscellaneous functions
    /// - Sorting: call TableGetSortSpecs() to retrieve latest sort specs for the table. NULL when not sorting.
    /// When 'sort_specs-&gt;SpecsDirty == true' you should sort your data. It will be true when sorting specs have
    /// changed since last call, or the first time. Make sure to set 'SpecsDirty = false' after sorting,
    /// else you may wastefully sort your data every frame!
    /// - Functions args 'int column_n' treat the default value of -1 as the same as passing the current column index.
    /// get latest sort specs for the table (NULL if not sorting).  Lifetime: don't hold on this pointer over multiple frames or past any subsequent call to BeginTable().
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableGetSortSpecs")]
    public static partial ImGuiTableSortSpecs* TableGetSortSpecs();

    /// <summary>
    /// return number of columns (value passed to BeginTable)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableGetColumnCount")]
    public static partial int TableGetColumnCount();

    /// <summary>
    /// return current column index.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableGetColumnIndex")]
    public static partial int TableGetColumnIndex();

    /// <summary>
    /// return current row index (header rows are accounted for)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableGetRowIndex")]
    public static partial int TableGetRowIndex();

    /// <summary>
    /// return "" if column didn't have a name declared by TableSetupColumn(). Pass -1 to use current column.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableGetColumnName")]
    public static partial nint TableGetColumnName(int column_n);

    /// <summary>
    /// return column flags so you can query their Enabled/Visible/Sorted/Hovered status flags. Pass -1 to use current column.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableGetColumnFlags")]
    public static partial ImGuiTableColumnFlags TableGetColumnFlags(int column_n);

    /// <summary>
    /// change user accessible enabled/disabled state of a column. Set to false to hide the column. User can use the context menu to change this themselves (right-click in headers, or right-click in columns body with ImGuiTableFlags_ContextMenuInBody)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableSetColumnEnabled")]
    public static partial void TableSetColumnEnabled(int column_n, [MarshalAs(UnmanagedType.U1)] bool v);

    /// <summary>
    /// return hovered column. return -1 when table is not hovered. return columns_count if the unused space at the right of visible columns is hovered. Can also use (TableGetColumnFlags() &amp; ImGuiTableColumnFlags_IsHovered) instead.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableGetHoveredColumn")]
    public static partial int TableGetHoveredColumn();

    /// <summary>
    /// change the color of a cell, row, or column. See ImGuiTableBgTarget_ flags for details.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TableSetBgColor")]
    public static partial void TableSetBgColor(ImGuiTableBgTarget target, uint color, int column_n);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ColumnsEx")]
    public static partial void ColumnsEx(int count, [MarshalAs(UnmanagedType.LPUTF8Str)] string id, [MarshalAs(UnmanagedType.U1)] bool borders);

    /// <summary>
    /// next column, defaults to current row or next row if the current row is finished
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_NextColumn")]
    public static partial void NextColumn();

    /// <summary>
    /// get current column index
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetColumnIndex")]
    public static partial int GetColumnIndex();

    /// <summary>
    /// get column width (in pixels). pass -1 to use current column
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetColumnWidth")]
    public static partial float GetColumnWidth(int column_index);

    /// <summary>
    /// set column width (in pixels). pass -1 to use current column
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetColumnWidth")]
    public static partial void SetColumnWidth(int column_index, float width);
